--- a/css/default.css
+++ b/css/default.css
@@ -105,3 +105,12 @@ h1 {
 	font-variant: normal;
 	text-transform: none;
 }
+
+.editor {
+    
+    width: 70%;  
+    border:ridge; 
+    border-color:green;
+    background-color: #f0f0f0;
+    
+}
