--- a/css/default.css
+++ b/css/default.css
@@ -31,8 +31,14 @@ background: linear-gradient(135deg, rgba(201,249,97,0.82) 2%,rgba(71,183,97,0.82
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d1c9f961', endColorstr='#007db9e8',GradientType=1 );
 }
 
-.customfield {
-
+.customfield:hover {
+    background: -moz-linear-gradient(-45deg, rgba(247,179,96,0.82) 2%, rgba(70,162,181,0.82) 54%, rgba(123,184,230,0.82) 98%, rgba(125,185,232,0) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(2%,rgba(247,179,96,0.82)), color-stop(54%,rgba(70,162,181,0.82)), color-stop(98%,rgba(123,184,230,0.82)), color-stop(100%,rgba(125,185,232,0)));
+background: -webkit-linear-gradient(-45deg, rgba(247,179,96,0.82) 2%,rgba(70,162,181,0.82) 54%,rgba(123,184,230,0.82) 98%,rgba(125,185,232,0) 100%);
+background: -o-linear-gradient(-45deg, rgba(247,179,96,0.82) 2%,rgba(70,162,181,0.82) 54%,rgba(123,184,230,0.82) 98%,rgba(125,185,232,0) 100%);
+background: -ms-linear-gradient(-45deg, rgba(247,179,96,0.82) 2%,rgba(70,162,181,0.82) 54%,rgba(123,184,230,0.82) 98%,rgba(125,185,232,0) 100%);
+background: linear-gradient(135deg, rgba(247,179,96,0.82) 2%,rgba(70,162,181,0.82) 54%,rgba(123,184,230,0.82) 98%,rgba(125,185,232,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d1f7b360', endColorstr='#007db9e8',GradientType=1 );
 
 }
 
@@ -58,14 +64,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d1c9f961', e
 
 body {
 
-	background: #b4df5b; /* Old browsers */
-background: -moz-linear-gradient(45deg,  #b4df5b 0%, #b4df5b 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#b4df5b), color-stop(100%,#b4df5b)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(45deg,  #b4df5b 0%,#b4df5b 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(45deg,  #b4df5b 0%,#b4df5b 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(45deg,  #b4df5b 0%,#b4df5b 100%); /* IE10+ */
-background: linear-gradient(45deg,  #b4df5b 0%,#b4df5b 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4df5b', endColorstr='#b4df5b',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+background: rgb(81,255,98);
+background: -moz-linear-gradient(left, rgba(81,255,98,1) 0%, rgba(91,229,73,1) 21%, rgba(195,211,69,1) 41%, rgba(82,191,165,1) 66%, rgba(33,239,184,1) 100%);
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(81,255,98,1)), color-stop(21%,rgba(91,229,73,1)), color-stop(41%,rgba(195,211,69,1)), color-stop(66%,rgba(82,191,165,1)), color-stop(100%,rgba(33,239,184,1)));
+background: -webkit-linear-gradient(left, rgba(81,255,98,1) 0%,rgba(91,229,73,1) 21%,rgba(195,211,69,1) 41%,rgba(82,191,165,1) 66%,rgba(33,239,184,1) 100%);
+background: -o-linear-gradient(left, rgba(81,255,98,1) 0%,rgba(91,229,73,1) 21%,rgba(195,211,69,1) 41%,rgba(82,191,165,1) 66%,rgba(33,239,184,1) 100%);
+background: -ms-linear-gradient(left, rgba(81,255,98,1) 0%,rgba(91,229,73,1) 21%,rgba(195,211,69,1) 41%,rgba(82,191,165,1) 66%,rgba(33,239,184,1) 100%);
+background: linear-gradient(to right, rgba(81,255,98,1) 0%,rgba(91,229,73,1) 21%,rgba(195,211,69,1) 41%,rgba(82,191,165,1) 66%,rgba(33,239,184,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#51ff62', endColorstr='#21efb8',GradientType=1 );
 
 	background-color: #31B404;
 	width: 100%;
