--- a/css/default.css
+++ b/css/default.css
@@ -125,9 +125,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#51ff62', end
 	border-width: inherit;
 	width: 100%;
 	height: 100%;
+    margin-top: 50px;
 	padding: 0px, 0px, 0px, 0px,;
 }
 
+#content {
+ margin-top: 1%;   
+}
 .footer {
 	border-style: dashed;
 	border-width: thin 0px 0px 0px;
